--- a/style.css
+++ b/style.css
@@ -1,49 +1,44 @@
-.image img
-{
-   width:80.8%;
-   padding-left: 7%;
-  
-   
-   
-
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
-
-.button button{
-    font-size: large;
-    width: 20.18%;
-    height: 7vh;
-    background-image:linear-gradient(to right,orange ,yellow ,green);
-    color: white;
-    
-    
+body, html {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
 }
 
-.image {
-    display: inline-block;
-    vertical-align: top;
-    width: 50%;
-    padding-left: 25%;
-    justify-content: center;
+.image-container {
+    width: 50vw;
+    height: 80vh;
+    margin: 10vh auto;
+    display: grid;
+    justify-items: center;
     align-items: center;
-    
-    padding-top: 10%;
-    margin: 0; /* Ensure no additional margins */
-
+    text-align: center;
 }
 
-.button {
-    
+.image-wrapper {
+    width: 100%;
+}
 
-    width: 200%;
-    height: auto; /* Adjust as needed */
-    padding-bottom: 10%;
+.image-wrapper img {
+    width: 100%;
+    display: block;
+}
+
+.interact-button {
+    width: 100%;
+    padding: 10px 0;
+    font-size: 1.2em;
     color: white;
-    margin: 0; /* Ensure no additional margins */
-    padding-left: 28.55%;
-    margin-top: -0.48%; /* Adjust to bring the button closer to the image */
+    background: linear-gradient(45deg, orange, #eef110,#1bc908);
+    border: none;
+    cursor: pointer;
 }
 
-body{
-    position: fixed;
+.interact-button:hover {
+    background: linear-gradient(45deg, #00bfff, #6a5acd);
 }
